--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -31548,8 +31548,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
   right: 0;
   bottom: 0;
   left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8)));
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
+  /* background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8))); */
+  /* background: linear-gradient(transparent, rgba(0, 0, 0, 0.8)); */
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
