--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -22258,6 +22258,8 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .package-card .package-img img {
   -webkit-transition: 0.8s;
   transition: 0.8s;
+  min-height: 250px;
+  min-width: 250px;
   width: 100%;
   height: 100%;
   border-top-right-radius: 12px;
@@ -32053,7 +32055,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .logo_area {
   transition: 1s all ease;
   width: 186px;
-  height: 200px;
+  height: auto;
   text-align: center;
   position: absolute;
   top: 0;
@@ -32066,7 +32068,7 @@ button.applyBtn.btn.btn-sm.btn-primary {
 .sticky-bar .logo_area {
   transition: 1s all ease;
   width: 200px;
-  height: 200px;
+  height: auto;
   text-align: center;
   position: absolute;
   top: 0 !important;
