--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -16128,11 +16128,59 @@ input[type=number] {
   display: inline-block;
 }
 
+.btn-red-sm {
+  background-color: #b32a2a;
+  border: 1px solid transparent;
+  padding: 8px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.3;
+  border-radius: 8px;
+  color: var(--white);
+  display: inline-block;
+}
+
+.btn-red-xs {
+  background-color: #b32a2a;
+  border: 1px solid transparent;
+  padding: 8px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.3;
+  border-radius: 8px;
+  color: var(--white);
+  display: inline-block;
+}
+
 .btn-primary-sm i {
   font-size: 20px;
 }
 
 .btn-primary-sm:hover {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  background-color: transparent;
+  border: 1px solid var(--goreme-color);
+  color: var(--goreme-color);
+}
+
+.btn-primary-xs {
+  background-color: var(--primary-color);
+  border: 1px solid transparent;
+  padding: 8px 20px;
+  font-size: .9rem;
+  font-weight: 500;
+  line-height: 1.3;
+  border-radius: 8px;
+  color: var(--white);
+  display: inline-block;
+}
+
+.btn-primary-xs i {
+  font-size: 1rem;
+}
+
+.btn-primary-xs:hover {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   background-color: transparent;
